Fixed contrast error on word colour

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -49,7 +49,7 @@ main img {
 }
 
 .grey {
-  color: grey;
+  color: rgb(75, 74, 74);
 }
 
 .orange {
